added search functionality to the get all route
